--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "vue": "^3.2.37"
   },
   "devDependencies": {
+    "@unocss/preset-uno": "^0.45.30",
     "@unocss/vite": "^0.45.30",
     "@vitejs/plugin-vue": "^3.1.0",
     "typescript": "^4.6.4",
