chore: miss build workflow

--- a/.github/workflows/publish-page.yml
+++ b/.github/workflows/publish-page.yml
@@ -4,7 +4,7 @@ on: push
 env:
   # FIXME: `surge token` 生成
   # https://docs.github.com/en/actions/security-guides/encrypted-secrets
-  X_TOKEN: 5c1f6ffee9e7b33a501effda59ed13c3
+  TOKEN: 5c1f6ffee9e7b33a501effda59ed13c3
 
 jobs:
 
@@ -19,4 +19,4 @@ jobs:
           npm i
           npm run build
           npm i -g surge
-          surge dist wuhan-stay.surge.sh --token ${{X_TOKEN}}
+          surge dist wuhan-stay.surge.sh --token ${{TOKEN}}
