--- a/.github/workflows/publish-page.yml
+++ b/.github/workflows/publish-page.yml
@@ -5,6 +5,7 @@ env:
   # FIXME: `surge token` 生成
   # https://docs.github.com/en/actions/security-guides/encrypted-secrets
   X_TOKEN: 5c1f6ffee9e7b33a501effda59ed13c3
+  VERCEl_TOKEN: SZ7FJZ5rTPCPFdzL4HWfbTSj
 
 jobs:
 
@@ -19,4 +20,6 @@ jobs:
           npm i
           npm run build
           npm i -g surge
+          npm i -g vercel
           surge dist wuhan-stay.surge.sh --token ${{ env.X_TOKEN }}
+          vercel -t ${{ env.VERCEl_TOKEN }} deploy dist
