--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
   },
   "dependencies": {
     "@types/express": "^4.17.14",
+    "preset-uno@0.47.6": "link:unocss/preset-uno@0.47.6",
     "vue": "^3.2.37"
   },
   "devDependencies": {
     "@types/node": "^18.11.10",
-    "@unocss/preset-uno": "^0.45.30",
     "@unocss/vite": "^0.45.30",
     "@vitejs/plugin-vue": "^3.1.0",
     "typescript": "^4.6.4",
