--- a/package.json
+++ b/package.json
@@ -9,15 +9,16 @@
   },
   "dependencies": {
     "@types/express": "^4.17.14",
+    "@vueuse/core": "^9.13.0",
     "preset-uno@0.47.6": "link:unocss/preset-uno@0.47.6",
     "vue": "^3.2.37"
   },
   "devDependencies": {
     "@types/node": "^18.11.10",
-    "@unocss/vite": "^0.45.30",
+    "@unocss/vite": "0.45.12",
     "@vitejs/plugin-vue": "^3.1.0",
     "typescript": "^4.6.4",
-    "unocss": "^0.45.30",
+    "unocss": "0.45.12",
     "vite": "^3.1.0",
     "vue-tsc": "^0.40.4"
   }
