--- a/package.json
+++ b/package.json
@@ -3,22 +3,24 @@
   "private": true,
   "version": "0.0.0",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --port 4399",
     "build": "vue-tsc --noEmit && vite build",
     "preview": "vite preview"
   },
   "dependencies": {
+    "@lazycatcloud/lzc-toolkit": "^0.0.50",
     "@types/express": "^4.17.14",
+    "@unocss/autocomplete": "^0.51.4",
+    "@unocss/preset-uno": "^0.51.4",
     "@vueuse/core": "^9.13.0",
-    "preset-uno@0.47.6": "link:unocss/preset-uno@0.47.6",
+    "auto-ellipsis-text": "^0.1.4",
+    "unocss": "^0.51.4",
     "vue": "^3.2.37"
   },
   "devDependencies": {
     "@types/node": "^18.11.10",
-    "@unocss/vite": "0.45.12",
     "@vitejs/plugin-vue": "^3.1.0",
     "typescript": "^4.6.4",
-    "unocss": "0.45.12",
     "vite": "^3.1.0",
     "vue-tsc": "^0.40.4"
   }
