--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@lazycatcloud/lzc-toolkit": "^0.0.50",
+    "@lazycatcloud/lzc-toolkit": "file:../../workspace/linux/lzc-toolkit",
     "@types/express": "^4.17.14",
     "@unocss/autocomplete": "^0.51.4",
     "@unocss/preset-uno": "^0.51.4",
