--- a/package.json
+++ b/package.json
@@ -14,8 +14,12 @@
     "@unocss/preset-uno": "^0.51.4",
     "@vueuse/core": "^9.13.0",
     "auto-ellipsis-text": "^0.1.4",
+    "qr-scanner-wechat": "^0.1.3",
+    "swiper": "^10.2.0",
     "unocss": "^0.51.4",
-    "vue": "^3.2.37"
+    "vue": "^3.2.37",
+    "vue-router": "^4.1.5",
+    "vue3-lottie": "^3.1.0"
   },
   "devDependencies": {
     "@types/node": "^18.11.10",
