--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@lazycatcloud/lzc-toolkit": "file:../../workspace/linux/lzc-toolkit",
+    "@lazycatcloud/lzc-toolkit": "link:/Users/ffffang/workspace/linux/lzc-toolkit",
     "@types/express": "^4.17.14",
     "@unocss/autocomplete": "^0.51.4",
     "@unocss/preset-uno": "^0.51.4",
@@ -17,6 +17,7 @@
     "qr-scanner-wechat": "^0.1.3",
     "swiper": "^10.2.0",
     "unocss": "^0.51.4",
+    "vite-svg-loader": "^5.1.0",
     "vue": "^3.2.37",
     "vue-router": "^4.1.5",
     "vue3-lottie": "^3.1.0"
