--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "unocss": "^0.51.4",
     "vite-svg-loader": "^5.1.0",
     "vue": "^3.4.27",
+    "vue-draggable-plus": "^0.5.0",
     "vue-router": "^4.1.5",
     "vue3-lottie": "^3.1.0"
   },
